--- a/string/index.html
+++ b/string/index.html
@@ -30,8 +30,8 @@
     <!-- <script src="./js/string-replace-method.js"></script> -->
     <!-- <script src="./js/string-replaceAll-method.js"></script> -->
     <script src=""></script>
-    <script src="./js/string-slice-method.js"></script>
-    <!-- <script src="./js/string-split-method.js"></script> -->
+    <!-- <script src="./js/string-slice-method.js"></script> -->
+    <script src="./js/string-split-method.js"></script>
     <!-- <script src="./js/string-startsWith-method.js"></script> -->
     <!-- <script src="./js/string-substring-method.js"></script> -->
     <!-- <script src="./js/string-toLocalLowerCase-method.js"></script> -->
