Built-In-method

--- a/string/index.html
+++ b/string/index.html
@@ -28,9 +28,9 @@
     <script src=""></script>
     <!-- <script src="./js/string-repeat-method.js"></script> -->
     <!-- <script src="./js/string-replace-method.js"></script> -->
-    <script src="./js/string-replaceAll-method.js"></script>
+    <!-- <script src="./js/string-replaceAll-method.js"></script> -->
     <script src=""></script>
-    <!-- <script src="./js/string-slice-method.js"></script> -->
+    <script src="./js/string-slice-method.js"></script>
     <!-- <script src="./js/string-split-method.js"></script> -->
     <!-- <script src="./js/string-startsWith-method.js"></script> -->
     <!-- <script src="./js/string-substring-method.js"></script> -->
