Built-In-method

--- a/string/index.html
+++ b/string/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <!-- <script src="./js/string-length-method.js"></script> -->
-    <script src="./js/string-at-method.js"></script>
-    <script src=""></script>
+    <!-- <script src="./js/string-at-method.js"></script> -->
+    <script src="./js/string-charAt-method.js"></script>
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
