Built-In-method

--- a/string/index.html
+++ b/string/index.html
@@ -9,8 +9,8 @@
 <body>
     <!-- <script src="./js/string-length-method.js"></script> -->
     <!-- <script src="./js/string-at-method.js"></script> -->
-    <script src="./js/string-charAt-method.js"></script>
-    <script src=""></script>
+    <!-- <script src="./js/string-charAt-method.js"></script> -->
+    <script src="./js/string-charCodeAt-method.js"></script>
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
