--- a/string/index.html
+++ b/string/index.html
@@ -11,8 +11,8 @@
     <!-- <script src="./js/string-at-method.js"></script> -->
     <!-- <script src="./js/string-charAt-method.js"></script> -->
     <!-- <script src="./js/string-charCodeAt-method.js"></script> -->
-    <script src="./js/string-codePointAt-method.js"></script>
-    <script src=""></script>
+    <!-- <script src="./js/string-codePointAt-method.js"></script> -->
+    <script src="./js/string-concat-method.js"></script>
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
