Built-In-method

--- a/string/index.html
+++ b/string/index.html
@@ -17,8 +17,8 @@
     <!-- <script src="./js/string-fromCharCode-method.js"></script> -->
     <!-- <script src="./js/string-fromCodePoint-method.js"></script> -->
     <!-- <script src="./js/string-includes-method.js"></script> -->
-    <script src="./js/string-indexOf-method.js"></script>
-    <script src=""></script>
+    <!-- <script src="./js/string-indexOf-method.js"></script> -->
+    <script src="./js/string-lastIndexOf-method.js"></script>
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
