--- a/string/index.html
+++ b/string/index.html
@@ -18,9 +18,9 @@
     <!-- <script src="./js/string-fromCodePoint-method.js"></script> -->
     <!-- <script src="./js/string-includes-method.js"></script> -->
     <!-- <script src="./js/string-indexOf-method.js"></script> -->
-    <script src="./js/string-lastIndexOf-method.js"></script>
+    <!-- <script src="./js/string-lastIndexOf-method.js"></script> -->
     <script src=""></script>
-    <script src=""></script>
+    <script src="./js/string-match-method.js"></script>
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
