--- a/string/index.html
+++ b/string/index.html
@@ -20,7 +20,7 @@
     <!-- <script src="./js/string-indexOf-method.js"></script> -->
     <!-- <script src="./js/string-lastIndexOf-method.js"></script> -->
     <script src=""></script>
-    <script src="./js/string-match-method.js"></script>
+    <!-- <script src="./js/string-match-method.js"></script> -->
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
@@ -42,6 +42,6 @@
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
-    <script src=""></script>
+    <script src="./js/string-valueOf-method.js"></script>
 </body>
 </html>
