Built-In-method

--- a/string/index.html
+++ b/string/index.html
@@ -41,7 +41,7 @@
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
-    <script src=""></script>
-    <script src="./js/string-valueOf-method.js"></script>
+    <script src="./js/string-trimStart-method.js"></script>
+    <!-- <script src="./js/string-valueOf-method.js"></script> -->
 </body>
 </html>
