--- a/string/index.html
+++ b/string/index.html
@@ -39,8 +39,8 @@
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
-    <script src=""></script>
-    <script src="./js/string-trimEnd-method.js"></script>
+    <script src="./js/string-trim-method.js"></script>
+    <!-- <script src="./js/string-trimEnd-method.js"></script> -->
     <!-- <script src="./js/string-trimStart-method.js"></script> -->
     <!-- <script src="./js/string-valueOf-method.js"></script> -->
 </body>
