Built-In-method

--- a/string/index.html
+++ b/string/index.html
@@ -35,8 +35,8 @@
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
-    <script src=""></script>
-    <script src="./js/string-toLowerCase-method.js"></script>
+    <script src="./js/string-toLocalUpperCase-method.js"></script>
+    <!-- <script src="./js/string-toLowerCase-method.js"></script> -->
     <!-- <script src="./js/string-toString-method.js"></script> -->
     <!-- <script src="./js/string-toUpperCase-method.js"></script> -->
     <!-- <script src="./js/string-trim-method.js"></script> -->
