--- a/string/index.html
+++ b/string/index.html
@@ -34,8 +34,8 @@
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
-    <script src=""></script>
-    <script src="./js/string-toLocalUpperCase-method.js"></script>
+    <script src="./js/string-toLocalLowerCase-method.js"></script>
+    <!-- <script src="./js/string-toLocalUpperCase-method.js"></script> -->
     <!-- <script src="./js/string-toLowerCase-method.js"></script> -->
     <!-- <script src="./js/string-toString-method.js"></script> -->
     <!-- <script src="./js/string-toUpperCase-method.js"></script> -->
