Built-In-method

--- a/string/index.html
+++ b/string/index.html
@@ -30,9 +30,9 @@
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
+    <script src="./js/string-slice-method.js"></script>
     <script src=""></script>
-    <script src=""></script>
-    <script src="./js/string-startsWith-method.js"></script>
+    <!-- <script src="./js/string-startsWith-method.js"></script> -->
     <!-- <script src="./js/string-substring-method.js"></script> -->
     <!-- <script src="./js/string-toLocalLowerCase-method.js"></script> -->
     <!-- <script src="./js/string-toLocalUpperCase-method.js"></script> -->
