--- a/string/index.html
+++ b/string/index.html
@@ -22,15 +22,15 @@
     <script src=""></script>
     <!-- <script src="./js/string-match-method.js"></script> -->
     <script src=""></script>
+    <!-- <script src="./js/string-normalization-method.js"></script> -->
+    <script src="./js/string-padEnd-method.js"></script>
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
-    <script src=""></script>
-    <script src=""></script>
-    <script src="./js/string-slice-method.js"></script>
+    <!-- <script src="./js/string-slice-method.js"></script> -->
     <script src=""></script>
     <!-- <script src="./js/string-startsWith-method.js"></script> -->
     <!-- <script src="./js/string-substring-method.js"></script> -->
