--- a/string/index.html
+++ b/string/index.html
@@ -27,8 +27,8 @@
     <!-- <script src="./js/string-padStart-method.js"></script> -->
     <script src=""></script>
     <!-- <script src="./js/string-repeat-method.js"></script> -->
-    <script src="./js/string-replace-method.js"></script>
-    <script src=""></script>
+    <!-- <script src="./js/string-replace-method.js"></script> -->
+    <script src="./js/string-replaceAll-method.js"></script>
     <script src=""></script>
     <!-- <script src="./js/string-slice-method.js"></script> -->
     <script src=""></script>
