--- a/array/index.html
+++ b/array/index.html
@@ -11,7 +11,7 @@
     <!-- <script src="./js/array-every-method.js"></script> -->
     <!-- <script src="./js/array-fill-method.js"></script> -->
     <!-- <script src="./js/array-filter-method.js"></script> -->
-    <!-- <script src="./js/array-find-method.js"></script> -->
+    <script src="./js/array-find-method.js"></script>
     <!-- <script src="./js/findindex-method.js"></script> -->
     <!-- <script src="./js/findlast-method.js"></script> -->
     <!-- <script src="./js/array-flat-method.js"></script> -->
@@ -38,7 +38,7 @@
     <!-- <script src="./js/array-tolocallestring-method.js"></script> -->
     <!-- <script src="./js/array-tostring-method.js"></script> -->
     <!-- <script src="./js/array-unshift-method.js"></script> -->
-    <script src="./js/array-value-method.js"></script>
+    <!-- <script src="./js/array-value-method.js"></script> -->
 
 
 
