--- a/array/index.html
+++ b/array/index.html
@@ -13,8 +13,8 @@
     <!-- <script src="./js/array-filter-method.js"></script> -->
     <!-- <script src="./js/array-find-method.js"></script> -->
     <!-- <script src="./js/findindex-method.js"></script> -->
-    <script src="./js/findlast-method.js"></script>
-    <!-- <script src="./js/array-findlastindex-method.js"></script> -->
+    <!-- <script src="./js/findlast-method.js"></script> -->
+    <script src="./js/array-findlastindex-method.js"></script>
     <!-- <script src="./js/array-flat-method.js"></script> -->
     <!-- <script src="./js/array-flatmap-method.js"></script> -->
     <!-- <script src="./js/array-foreach-method.js"></script> -->
