--- a/array/index.html
+++ b/array/index.html
@@ -17,8 +17,8 @@
     <!-- <script src="./js/array-findlastindex-method.js"></script> -->
     <!-- <script src="./js/array-flat-method.js"></script> -->
     <!-- <script src="./js/array-flatmap-method.js"></script> -->
-    <script src="./js/array-foreach-method.js"></script>
-    <!-- <script src="./js/array-form-method.js"></script> -->
+    <!-- <script src="./js/array-foreach-method.js"></script> -->
+    <script src="./js/array-form-method.js"></script>
     <!-- <script src="./js/array-include-method.js"></script> -->
     <!-- <script src="./js/array-isarray-method.js"></script> -->
     <!-- <script src="./js/array-join-method.js"></script> -->
