Built-In-method

--- a/array/index.html
+++ b/array/index.html
@@ -18,8 +18,8 @@
     <!-- <script src="./js/array-flat-method.js"></script> -->
     <!-- <script src="./js/array-flatmap-method.js"></script> -->
     <!-- <script src="./js/array-foreach-method.js"></script> -->
-    <script src="./js/array-form-method.js"></script>
-    <!-- <script src="./js/array-include-method.js"></script> -->
+    <!-- <script src="./js/array-form-method.js"></script> -->
+    <script src="./js/array-include-method.js"></script>
     <!-- <script src="./js/array-isarray-method.js"></script> -->
     <!-- <script src="./js/array-join-method.js"></script> -->
     <!-- <script src="./js/array-keys-method.js"></script> -->
