--- a/array/index.html
+++ b/array/index.html
@@ -20,9 +20,9 @@
     <!-- <script src="./js/array-foreach-method.js"></script> -->
     <!-- <script src="./js/array-form-method.js"></script> -->
     <!-- <script src="./js/array-include-method.js"></script> -->
-    <script src="./js/array-indexof-method.js"></script>
+    <!-- <script src="./js/array-indexof-method.js"></script> -->
     <!-- <script src="./js/array-isarray-method.js"></script> -->
-    <!-- <script src="./js/array-join-method.js"></script> -->
+    <script src="./js/array-join-method.js"></script>
     <!-- <script src="./js/array-keys-method.js"></script> -->
     <!-- <script src="./js/array-lastindexof-method.js"></script> -->
     <!-- <script src="./js/array-map-method.js"></script> -->
