--- a/array/index.html
+++ b/array/index.html
@@ -23,8 +23,8 @@
     <!-- <script src="./js/array-indexof-method.js"></script> -->
     <!-- <script src="./js/array-isarray-method.js"></script> -->
     <!-- <script src="./js/array-join-method.js"></script> -->
-    <script src="./js/array-keys-method.js"></script>
-    <!-- <script src="./js/array-lastindexof-method.js"></script> -->
+    <!-- <script src="./js/array-keys-method.js"></script> -->
+    <script src="./js/array-lastindexof-method.js"></script>
     <!-- <script src="./js/array-map-method.js"></script> -->
     <!-- <script src="./js/array-of-method.js"></script> -->
     <!-- <script src="./js/array-pop-method.js"></script> -->
