Built-In-method

--- a/array/index.html
+++ b/array/index.html
@@ -25,8 +25,8 @@
     <!-- <script src="./js/array-join-method.js"></script> -->
     <!-- <script src="./js/array-keys-method.js"></script> -->
     <!-- <script src="./js/array-lastindexof-method.js"></script> -->
-    <script src="./js/array-map-method.js"></script>
-    <!-- <script src="./js/array-of-method.js"></script> -->
+    <!-- <script src="./js/array-map-method.js"></script> -->
+    <script src="./js/array-of-method.js"></script>
     <!-- <script src="./js/array-pop-method.js"></script> -->
     <!-- <script src="./js/array-push-method.js"></script> -->
     <!-- <script src="./js/array-reduse-method.js"></script> -->
