--- a/array/index.html
+++ b/array/index.html
@@ -26,9 +26,9 @@
     <!-- <script src="./js/array-keys-method.js"></script> -->
     <!-- <script src="./js/array-lastindexof-method.js"></script> -->
     <!-- <script src="./js/array-map-method.js"></script> -->
-    <script src="./js/array-of-method.js"></script>
+    <!-- <script src="./js/array-of-method.js"></script> -->
     <!-- <script src="./js/array-pop-method.js"></script> -->
-    <!-- <script src="./js/array-push-method.js"></script> -->
+    <script src="./js/array-push-method.js"></script>
     <!-- <script src="./js/array-reduse-method.js"></script> -->
     <!-- <script src="./js/array-reduceright-method.js"></script> -->
     <!-- <script src="./js/array-reverse-method.js"></script> -->
