Built-In-method

--- a/array/index.html
+++ b/array/index.html
@@ -28,8 +28,8 @@
     <!-- <script src="./js/array-map-method.js"></script> -->
     <!-- <script src="./js/array-of-method.js"></script> -->
     <!-- <script src="./js/array-pop-method.js"></script> -->
-    <script src="./js/array-push-method.js"></script>
-    <!-- <script src="./js/array-reduse-method.js"></script> -->
+    <!-- <script src="./js/array-push-method.js"></script> -->
+    <script src="./js/array-reduse-method.js"></script>
     <!-- <script src="./js/array-reduceright-method.js"></script> -->
     <!-- <script src="./js/array-reverse-method.js"></script> -->
     <!-- <script src="./js/array-shift-method.js"></script> -->
