--- a/array/index.html
+++ b/array/index.html
@@ -31,9 +31,9 @@
     <!-- <script src="./js/array-push-method.js"></script> -->
     <!-- <script src="./js/array-reduse-method.js"></script> -->
     <!-- <script src="./js/array-reduceright-method.js"></script> -->
-    <script src="./js/array-reverse-method.js"></script>
+    <!-- <script src="./js/array-reverse-method.js"></script> -->
     <!-- <script src="./js/array-shift-method.js"></script> -->
-    <!-- <script src="./js/array-slice-method.js"></script> -->
+    <script src="./js/array-slice-method.js"></script>
     <!-- <script src="./js/array-some-method.js"></script> -->
     <!-- <script src="./js/array-sort-method.js"></script> -->
     <!-- <script src="./js/array-splice-method.js"></script> -->
