--- a/array/index.html
+++ b/array/index.html
@@ -34,8 +34,8 @@
     <!-- <script src="./js/array-reverse-method.js"></script> -->
     <!-- <script src="./js/array-shift-method.js"></script> -->
     <!-- <script src="./js/array-slice-method.js"></script> -->
-    <script src="./js/array-some-method.js"></script>
-    <!-- <script src="./js/array-sort-method.js"></script> -->
+    <!-- <script src="./js/array-some-method.js"></script> -->
+    <script src="./js/array-sort-method.js"></script>
     <!-- <script src="./js/array-splice-method.js"></script> -->
     <!-- <script src="./js/array-tolocallestring-method.js"></script> -->
     <!-- <script src="./js/array-tostring-method.js"></script> -->
