Built-In-method

--- a/array/index.html
+++ b/array/index.html
@@ -36,10 +36,10 @@
     <!-- <script src="./js/array-slice-method.js"></script> -->
     <!-- <script src="./js/array-some-method.js"></script> -->
     <!-- <script src="./js/array-sort-method.js"></script> -->
-    <script src="./js/array-splice-method.js"></script>
+    <!-- <script src="./js/array-splice-method.js"></script> -->
     <!-- <script src="./js/array-tolocallestring-method.js"></script> -->
     <!-- <script src="./js/array-tostring-method.js"></script> -->
-    <!-- <script src="./js/array-unshift-method.js"></script> -->
+    <script src="./js/array-unshift-method.js"></script>
     <!-- <script src="./js/array-value-method.js"></script> -->
 
 
