Built-In-method

--- a/string/index.html
+++ b/string/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- <script src="./js/string-length-method.js"></script> -->
-    <!-- <script src="./js/string-at-method.js"></script> -->
+    <script src="./js/string-at-method.js"></script>
     <!-- <script src="./js/string-charAt-method.js"></script> -->
     <!-- <script src="./js/string-charCodeAt-method.js"></script> -->
     <!-- <script src="./js/string-codePointAt-method.js"></script> -->
@@ -31,7 +31,7 @@
     <!-- <script src="./js/string-replaceAll-method.js"></script> -->
     <script src=""></script>
     <!-- <script src="./js/string-slice-method.js"></script> -->
-    <script src="./js/string-split-method.js"></script>
+    <!-- <script src="./js/string-split-method.js"></script> -->
     <!-- <script src="./js/string-startsWith-method.js"></script> -->
     <!-- <script src="./js/string-substring-method.js"></script> -->
     <!-- <script src="./js/string-toLocalLowerCase-method.js"></script> -->
