Built-In-method

--- a/string/index.html
+++ b/string/index.html
@@ -39,9 +39,9 @@
     <!-- <script src="./js/string-toLowerCase-method.js"></script> -->
     <!-- <script src="./js/string-toString-method.js"></script> -->
     <!-- <script src="./js/string-toUpperCase-method.js"></script> -->
-    <!-- <script src="./js/string-trim-method.js"></script> -->
+    <script src="./js/string-trim-method.js"></script>
     <!-- <script src="./js/string-trimEnd-method.js"></script> -->
-    <script src="./js/string-trimStart-method.js"></script>
+    <!-- <script src="./js/string-trimStart-method.js"></script> -->
     <!-- <script src="./js/string-valueOf-method.js"></script> -->
 </body>
 </html>
