built-in-methods

--- a/object/index.html
+++ b/object/index.html
@@ -29,7 +29,7 @@
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<script src="./js/object-prototype-value-method.js"></script>
+<script src="./js/object-prototype-tostring-method.js"></script>
+<!-- <script src="./js/object-prototype-valueof-method.js"></script> -->
+<!-- <script src="./js/object-prototype-value-method.js"></script> -->
 </html>
