built-in-methods

--- a/object/index.html
+++ b/object/index.html
@@ -26,10 +26,9 @@
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
+<script src="./js/object-seal-method.js"></script>
 <!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<script src="./js/object-prototype-tostring-method.js"></script>
+<!-- <script src="./js/object-prototype-tostring-method.js"></script> -->
 <!-- <script src="./js/object-prototype-valueof-method.js"></script> -->
 <!-- <script src="./js/object-prototype-value-method.js"></script> -->
 </html>
