built-in-methods

--- a/object/index.html
+++ b/object/index.html
@@ -23,10 +23,10 @@
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
+<script src="./js/object-keys-method.js"></script>
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<script src="./js/object-seal-method.js"></script>
+<!-- <script src="./js/object-seal-method.js"></script> -->
 <!-- <script src=""></script> -->
 <!-- <script src="./js/object-prototype-tostring-method.js"></script> -->
 <!-- <script src="./js/object-prototype-valueof-method.js"></script> -->
