built-in-methods

--- a/object/index.html
+++ b/object/index.html
@@ -22,8 +22,8 @@
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<script src="./js/object-keys-method.js"></script>
+<script src="./js/object-issealed-method.js"></script>
+<!-- <script src="./js/object-keys-method.js"></script> -->
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
 <!-- <script src="./js/object-seal-method.js"></script> -->
