built-in-methods

--- a/object/index.html
+++ b/object/index.html
@@ -9,6 +9,7 @@
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
+<script src="./js/object-freeze-method.js"></script>
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
@@ -21,8 +22,7 @@
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<script src="./js/object-issealed-method.js"></script>
+<!-- <script src="./js/object-issealed-method.js"></script> -->
 <!-- <script src="./js/object-keys-method.js"></script> -->
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
