built-in-methods

--- a/object/index.html
+++ b/object/index.html
@@ -4,30 +4,30 @@
 </head>
 <body>
 </body>
-<!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
+<!-- <script src="./js/object-assign.js"></script> -->
+<!-- <script src="./js/object-create.js"></script> -->
+<script src="./js/object-define-properties-method.js"></script>
+<script src=""></script>
+<script src=""></script>
 <!-- <script src="./js/object-freeze-method.js"></script> -->
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
 <!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<script src="./js/object-isfrozen-method.js"></script>
+<script src=""></script>
+<script src=""></script>
+<script src=""></script>
+<script src=""></script>
+<script src=""></script>
+<script src=""></script>
+<!-- <script src="./js/object-isfrozen-method.js"></script> -->
 <!-- <script src=""></script> -->
 <!-- <script src="./js/object-issealed-method.js"></script> -->
 <!-- <script src="./js/object-keys-method.js"></script> -->
-<!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
+<script src=""></script>
+<script src=""></script>
 <!-- <script src="./js/object-seal-method.js"></script> -->
-<!-- <script src=""></script> -->
+<script src=""></script>
 <!-- <script src="./js/object-prototype-tostring-method.js"></script> -->
 <!-- <script src="./js/object-prototype-valueof-method.js"></script> -->
 <!-- <script src="./js/object-prototype-value-method.js"></script> -->
