built-in-methods

--- a/object/index.html
+++ b/object/index.html
@@ -6,8 +6,8 @@
 </body>
 <!-- <script src="./js/object-assign.js"></script> -->
 <!-- <script src="./js/object-create.js"></script> -->
-<script src="./js/object-define-properties-method.js"></script>
-<script src=""></script>
+<!-- <script src="./js/object-define-properties-method.js"></script> -->
+<script src="./js/object-defineproperty-method.js"></script>
 <script src=""></script>
 <!-- <script src="./js/object-freeze-method.js"></script> -->
 <!-- <script src=""></script> -->
