built-in-methods

--- a/object/index.html
+++ b/object/index.html
@@ -7,13 +7,13 @@
 <!-- <script src="./js/object-assign.js"></script> -->
 <!-- <script src="./js/object-create.js"></script> -->
 <!-- <script src="./js/object-define-properties-method.js"></script> -->
-<script src="./js/object-defineproperty-method.js"></script>
-<script src=""></script>
+<!-- <script src="./js/object-defineproperty-method.js"></script> -->
+<script src="./js/object-entries-method.js"></script>
 <!-- <script src="./js/object-freeze-method.js"></script> -->
-<!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
-<!-- <script src=""></script> -->
+<script src=""></script>
+<script src=""></script>
+<script src=""></script>
+<script src=""></script>
 <script src=""></script>
 <script src=""></script>
 <script src=""></script>
@@ -21,7 +21,7 @@
 <script src=""></script>
 <script src=""></script>
 <!-- <script src="./js/object-isfrozen-method.js"></script> -->
-<!-- <script src=""></script> -->
+<script src=""></script>
 <!-- <script src="./js/object-issealed-method.js"></script> -->
 <!-- <script src="./js/object-keys-method.js"></script> -->
 <script src=""></script>
