built-in-methods

--- a/object/index.html
+++ b/object/index.html
@@ -8,9 +8,9 @@
 <!-- <script src="./js/object-create.js"></script> -->
 <!-- <script src="./js/object-define-properties-method.js"></script> -->
 <!-- <script src="./js/object-defineproperty-method.js"></script> -->
-<script src="./js/object-entries-method.js"></script>
+<!-- <script src="./js/object-entries-met/hod.js"></script> -->
 <!-- <script src="./js/object-freeze-method.js"></script> -->
-<script src=""></script>
+<script src="./js/object-formEntries-method.js"></script>
 <script src=""></script>
 <script src=""></script>
 <script src=""></script>
