built-in-methods

--- a/object/index.html
+++ b/object/index.html
@@ -10,8 +10,8 @@
 <!-- <script src="./js/object-defineproperty-method.js"></script> -->
 <!-- <script src="./js/object-entries-met/hod.js"></script> -->
 <!-- <script src="./js/object-freeze-method.js"></script> -->
-<script src="./js/object-formEntries-method.js"></script>
-<script src=""></script>
+<!-- <script src="./js/object-formEntries-method.js"></script> -->
+<script src="./js/object-getownpropertydescriptors-method.js"></script>
 <script src=""></script>
 <script src=""></script>
 <script src=""></script>
