built-in-methods

--- a/object/index.html
+++ b/object/index.html
@@ -11,8 +11,8 @@
 <!-- <script src="./js/object-entries-met/hod.js"></script> -->
 <!-- <script src="./js/object-freeze-method.js"></script> -->
 <!-- <script src="./js/object-formEntries-method.js"></script> -->
-<script src="./js/object-getownpropertydescriptor-method.js"></script>
-<script src="js/"></script>
+<!-- <script src="./js/object-getownpropertydescriptor-method.js"></script> -->
+<script src="js/object-getownpropertydescriptors.js"></script>
 <script src=""></script>
 <script src=""></script>
 <script src=""></script>
