built-in-methods

--- a/object/index.html
+++ b/object/index.html
@@ -12,8 +12,8 @@
 <!-- <script src="./js/object-freeze-method.js"></script> -->
 <!-- <script src="./js/object-formEntries-method.js"></script> -->
 <!-- <script src="./js/object-getownpropertydescriptor-method.js"></script> -->
-<script src="js/object-getownpropertydescriptors.js"></script>
-<script src=""></script>
+<!-- <script src="js/object-getownpropertydescriptors.js"></script> -->
+<script src="./js/object-getownpropertyname-method.js"></script>
 <script src=""></script>
 <script src=""></script>
 <script src=""></script>
