--- a/object/index.html
+++ b/object/index.html
@@ -13,10 +13,10 @@
 <!-- <script src="./js/object-formEntries-method.js"></script> -->
 <!-- <script src="./js/object-getownpropertydescriptor-method.js"></script> -->
 <!-- <script src="js/object-getownpropertydescriptors.js"></script> -->
-<script src="./js/object-getownpropertyname-method.js"></script>
+<!-- <script src="./js/object-getownpropertyname-method.js"></script> -->
 <script src=""></script>
 <script src=""></script>
-<script src=""></script>
+<script src="./js/object-hasown-method.js"></script>
 <script src=""></script>
 <script src=""></script>
 <script src=""></script>
