built-in-methods

--- a/object/index.html
+++ b/object/index.html
@@ -16,8 +16,8 @@
 <!-- <script src="./js/object-getownpropertyname-method.js"></script> -->
 <script src=""></script>
 <script src=""></script>
-<script src="./js/object-hasown-method.js"></script>
-<script src=""></script>
+<!-- <script src="./js/object-hasown-method.js"></script> -->
+<script src="./js/object-hasown-propwety"></script>
 <script src=""></script>
 <script src=""></script>
 <!-- <script src="./js/object-isfrozen-method.js"></script> -->
