built-in-methods

--- a/object/index.html
+++ b/object/index.html
@@ -17,7 +17,7 @@
 <script src=""></script>
 <script src=""></script>
 <!-- <script src="./js/object-hasown-method.js"></script> -->
-<script src="./js/object-hasown-propwety"></script>
+<!-- <script src="./js/object-hasown-propwety"></script> -->
 <script src=""></script>
 <script src=""></script>
 <!-- <script src="./js/object-isfrozen-method.js"></script> -->
