--- a/array/index.html
+++ b/array/index.html
@@ -40,8 +40,8 @@
     <!-- <script src="./js/array-tolocallestring-method.js"></script> -->
     <!-- <script src="./js/array-tostring-method.js"></script> -->
     <!-- <script src="./js/array-unshift-method.js"></script> -->
-    <script src="./js/array-value-method.js"></script>
-
+    <!-- <script src="./js/array-value-method.js"></script> -->
+   <script src="./js/text.js"></script>
 
 
 
