--- a/array/index.html
+++ b/array/index.html
@@ -10,8 +10,8 @@
     <!-- <script src="./js/array-entries-method.js"></script> -->
     <!-- <script src="./js/array-every-method.js"></script> -->
     <!-- <script src="./js/array-fill-method.js"></script> -->
-    <script src="./js/array-filter-method.js"></script>
-    <!-- <script src="./js/array-find-method.js"></script> -->
+    <!-- <script src="./js/array-filter-method.js"></script> -->
+    <script src="./js/array-find-method.js"></script>
     <!-- <script src="./js/findindex-method.js"></script> -->
     <!-- <script src="./js/findlast-method.js"></script> -->
     <!-- <script src="./js/array-findlastindex-method.js"></script> -->
