--- a/array/index.html
+++ b/array/index.html
@@ -11,11 +11,11 @@
     <!-- <script src="./js/array-every-method.js"></script> -->
     <!-- <script src="./js/array-fill-method.js"></script> -->
     <!-- <script src="./js/array-filter-method.js"></script> -->
-    <script src="./js/array-find-method.js"></script>
+    <!-- <script src="./js/array-find-method.js"></script> -->
     <!-- <script src="./js/findindex-method.js"></script> -->
     <!-- <script src="./js/findlast-method.js"></script> -->
     <!-- <script src="./js/array-findlastindex-method.js"></script> -->
-    <!-- <script src="./js/array-flat-method.js"></script> -->
+    <script src="./js/array-flat-method.js"></script>
     <!-- <script src="./js/array-flatmap-method.js"></script> -->
     <!-- <script src="./js/array-foreach-method.js"></script> -->
     <!-- <script src="./js/array-form-method.js"></script> -->
