--- a/array/index.html
+++ b/array/index.html
@@ -15,7 +15,7 @@
     <!-- <script src="./js/findindex-method.js"></script> -->
     <!-- <script src="./js/findlast-method.js"></script> -->
     <!-- <script src="./js/array-findlastindex-method.js"></script> -->
-    <script src="./js/array-flat-method.js"></script>
+    <!-- <script src="./js/array-flat-method.js"></script> -->
     <!-- <script src="./js/array-flatmap-method.js"></script> -->
     <!-- <script src="./js/array-foreach-method.js"></script> -->
     <!-- <script src="./js/array-form-method.js"></script> -->
@@ -29,7 +29,7 @@
     <!-- <script src="./js/array-of-method.js"></script> -->
     <!-- <script src="./js/array-pop-method.js"></script> -->
     <!-- <script src="./js/array-push-method.js"></script> -->
-    <!-- <script src="./js/array-reduse-method.js"></script> -->
+    <script src="./js/array-reduse-method.js"></script>
     <!-- <script src="./js/array-reduceright-method.js"></script> -->
     <!-- <script src="./js/array-reverse-method.js"></script> -->
     <!-- <script src="./js/array-shift-method.js"></script> -->
