--- a/array/index.html
+++ b/array/index.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-    <!-- <script src="./js/array-at-methods.js"></script> -->
+    <script src="./js/array-at-methods.js"></script>
     <!-- <script src="./js/array-lenght-method.js"></script> -->
     <!-- <script src="./js/array-concat-method.js"></script> -->
     <!-- <script src="./js/array-copywithin-method.js"></script> -->
@@ -41,7 +41,7 @@
     <!-- <script src="./js/array-tostring-method.js"></script> -->
     <!-- <script src="./js/array-unshift-method.js"></script> -->
     <!-- <script src="./js/array-value-method.js"></script> -->
-   <script src="./js/text.js"></script>
+   <!-- <script src="./js/text.js"></script> -->
 
 
 
