--- a/array/index.html
+++ b/array/index.html
@@ -6,9 +6,9 @@
     <!-- <script src="./js/array-at-methods.js"></script> -->
     <!-- <script src="./js/array-lenght-method.js"></script> -->
     <!-- <script src="./js/array-concat-method.js"></script> -->
-    <!-- <script src="./js/array-copywithin-method.js"></script> -->
+    <script src="./js/array-copywithin-method.js"></script>
     <!-- <script src="./js/array-entries-method.js"></script> -->
-    <script src="./js/array-every-method.js"></script>
+    <!-- <script src="./js/array-every-method.js"></script> -->
     <!-- <script src="./js/array-fill-method.js"></script> -->
     <!-- <script src="./js/array-filter-method.js"></script> -->
     <!-- <script src="./js/array-find-method.js"></script> -->
