--- a/string/index.html
+++ b/string/index.html
@@ -12,24 +12,24 @@
     <!-- <script src="./js/string-charAt-method.js"></script> -->
     <!-- <script src="./js/string-charCodeAt-method.js"></script> -->
     <!-- <script src="./js/string-codePointAt-method.js"></script> -->
-    <script src="./js/string-concat-method.js"></script>
+    <!-- <script src="./js/string-concat-method.js"></script> -->
     <!-- <script src="./js/string-endsWith-method.js"></script> -->
     <!-- <script src="./js/string-fromCharCode-method.js"></script> -->
     <!-- <script src="./js/string-fromCodePoint-method.js"></script> -->
     <!-- <script src="./js/string-includes-method.js"></script> -->
     <!-- <script src="./js/string-indexOf-method.js"></script> -->
     <!-- <script src="./js/string-lastIndexOf-method.js"></script> -->
-    <script src=""></script>
+    <!-- <script src="./js/string-localCompareOf-method.js"></script> -->
     <!-- <script src="./js/string-match-method.js"></script> -->
-    <script src=""></script>
+    <!-- <script src="./js/string-matchAll-method.js"></script> -->
     <!-- <script src="./js/string-normalization-method.js"></script> -->
     <!-- <script src="./js/string-padEnd-method.js"></script> -->
     <!-- <script src="./js/string-padStart-method.js"></script> -->
-    <script src=""></script>
+    <!-- <script src="./js/string-raw-method.js"></script> -->
     <!-- <script src="./js/string-repeat-method.js"></script> -->
     <!-- <script src="./js/string-replace-method.js"></script> -->
     <!-- <script src="./js/string-replaceAll-method.js"></script> -->
-    <script src=""></script>
+    <script src="./js/string-search-method.js"></script>
     <!-- <script src="./js/string-slice-method.js"></script> -->
     <!-- <script src="./js/string-split-method.js"></script> -->
     <!-- <script src="./js/string-startsWith-method.js"></script> -->
