--- a/string/index.html
+++ b/string/index.html
@@ -29,7 +29,7 @@
     <!-- <script src="./js/string-repeat-method.js"></script> -->
     <!-- <script src="./js/string-replace-method.js"></script> -->
     <!-- <script src="./js/string-replaceAll-method.js"></script> -->
-    <script src="./js/string-search-method.js"></script>
+    <!-- <script src="./js/string-search-method.js"></script> -->
     <!-- <script src="./js/string-slice-method.js"></script> -->
     <!-- <script src="./js/string-split-method.js"></script> -->
     <!-- <script src="./js/string-startsWith-method.js"></script> -->
