--- a/array/index.html
+++ b/array/index.html
@@ -37,7 +37,7 @@
     <!-- <script src="./js/array-some-method.js"></script> -->
     <!-- <script src="./js/array-sort-method.js"></script> -->
     <!-- <script src="./js/array-splice-method.js"></script> -->
-    <script src="./js/array-tolocallestring-method.js"></script>
+    <!-- <script src="./js/array-tolocallestring-method.js"></script> -->
     <!-- <script src="./js/array-tostring-method.js"></script> -->
     <!-- <script src="./js/array-unshift-method.js"></script> -->
     <!-- <script src="./js/array-value-method.js"></script> -->
