--- a/object/index.html
+++ b/object/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 </head>
 <body>
@@ -8,27 +8,26 @@
 <!-- <script src="./js/object-create.js"></script> -->
 <!-- <script src="./js/object-define-properties-method.js"></script> -->
 <!-- <script src="./js/object-defineproperty-method.js"></script> -->
-<!-- <script src="./js/object-entries-met/hod.js"></script> -->
+<!-- <script src="./js/object-entries-method.js"></script> -->
 <!-- <script src="./js/object-freeze-method.js"></script> -->
 <!-- <script src="./js/object-formEntries-method.js"></script> -->
 <!-- <script src="./js/object-getownpropertydescriptor-method.js"></script> -->
 <!-- <script src="js/object-getownpropertydescriptors.js"></script> -->
 <!-- <script src="./js/object-getownpropertyname-method.js"></script> -->
-<script src=""></script>
-<script src=""></script>
+<!-- <script src="./js/object-getownpropertysymbols-method.js"></script> -->
+<!-- <script src="./js/object-getpropertypeof-method.js"></script> -->
 <!-- <script src="./js/object-hasown-method.js"></script> -->
 <!-- <script src="./js/object-hasown-propwety"></script> -->
-<script src=""></script>
-<script src=""></script>
+<!-- <script src="./js/object-isextensible-method.js"></script> -->
 <!-- <script src="./js/object-isfrozen-method.js"></script> -->
-<script src=""></script>
 <!-- <script src="./js/object-issealed-method.js"></script> -->
-<!-- <script src="./js/object-keys-method.js"></script> -->
-<script src=""></script>
-<script src=""></script>
+<script src="./js/object-keys-method.js"></script>
+<script src="./js/object-preventextensions-method.js"></script>
+<!-- <script src="./js/object-propertype-isprototypeof-method.js"></script> -->
 <!-- <script src="./js/object-seal-method.js"></script> -->
-<script src=""></script>
+<!-- <script src="./js/object-propertype-propertyisenumerable-method.js"></script> -->
 <!-- <script src="./js/object-prototype-tostring-method.js"></script> -->
 <!-- <script src="./js/object-prototype-valueof-method.js"></script> -->
 <!-- <script src="./js/object-prototype-value-method.js"></script> -->
+<!-- <script src="./js/test.js"></script> -->
 </html>
