built-in-method

--- a/object/index.html
+++ b/object/index.html
@@ -3,13 +3,14 @@
 <head>
 </head>
 <body>
+
 </body>
 <!-- <script src="./js/object-assign.js"></script> -->
 <!-- <script src="./js/object-create.js"></script> -->
 <!-- <script src="./js/object-define-properties-method.js"></script> -->
 <!-- <script src="./js/object-defineproperty-method.js"></script> -->
 <!-- <script src="./js/object-entries-method.js"></script> -->
-<!-- <script src="./js/object-freeze-method.js"></script> -->
+<script src="./js/object-freeze-method.js"></script>
 <!-- <script src="./js/object-formEntries-method.js"></script> -->
 <!-- <script src="./js/object-getownpropertydescriptor-method.js"></script> -->
 <!-- <script src="js/object-getownpropertydescriptors.js"></script> -->
@@ -21,8 +22,8 @@
 <!-- <script src="./js/object-isextensible-method.js"></script> -->
 <!-- <script src="./js/object-isfrozen-method.js"></script> -->
 <!-- <script src="./js/object-issealed-method.js"></script> -->
-<script src="./js/object-keys-method.js"></script>
-<script src="./js/object-preventextensions-method.js"></script>
+<!-- <script src="./js/object-keys-method.js"></script> -->
+<!-- <script src="./js/object-preventextensions-method.js"></script> -->
 <!-- <script src="./js/object-propertype-isprototypeof-method.js"></script> -->
 <!-- <script src="./js/object-seal-method.js"></script> -->
 <!-- <script src="./js/object-propertype-propertyisenumerable-method.js"></script> -->
