built-in-method

--- a/object/index.html
+++ b/object/index.html
@@ -18,9 +18,9 @@
 <!-- <script src="./js/object-hasown-method.js"></script> -->
 <!-- <script src="./js/object-hasown-propwety"></script> -->
 <!-- <script src="./js/object-isextensible-method.js"></script> -->
-<script src="./js/object-isfrozen-method.js"></script>
+<!-- <script src="./js/object-isfrozen-method.js"></script> -->
 <!-- <script src="./js/object-issealed-method.js"></script> -->
-<!-- <script src="./js/object-keys-method.js"></script> -->
+<script src="./js/object-keys-method.js"></script>
 <!-- <script src="./js/object-preventextensions-method.js"></script> -->
 <!-- <script src="./js/object-propertype-isprototypeof-method.js"></script> -->
 <!-- <script src="./js/object-seal-method.js"></script> -->
