built-in-method

--- a/object/index.html
+++ b/object/index.html
@@ -20,11 +20,9 @@
 <!-- <script src="./js/object-isextensible-method.js"></script> -->
 <!-- <script src="./js/object-isfrozen-method.js"></script> -->
 <!-- <script src="./js/object-issealed-method.js"></script> -->
-<script src="./js/object-keys-method.js"></script>
-<!-- <script src="./js/object-preventextensions-method.js"></script> -->
-<!-- <script src="./js/object-propertype-isprototypeof-method.js"></script> -->
+<!-- <script src="./js/object-keys-method.js"></script> -->
+<script src="./js/object-preventextensions-method.js"></script>
 <!-- <script src="./js/object-seal-method.js"></script> -->
-<!-- <script src="./js/object-propertype-propertyisenumerable-method.js"></script> -->
 <!-- <script src="./js/object-prototype-tostring-method.js"></script> -->
 <!-- <script src="./js/object-prototype-valueof-method.js"></script> -->
 <!-- <script src="./js/object-prototype-value-method.js"></script> -->
